# app/api/archives/[archive-code]/[fund-code]/data.ts
@@ -1,7 +1,6 @@
 import { GetFundResponse } from "@/app/api/archives/[archive-code]/[fund-code]/route";
 import prisma from "@/lib/db";
 
-
 export const getFundByCode = async (archiveCode: string, fundCode: string): Promise<GetFundResponse | null> => {
   const fund = await prisma.fund.findFirst({
     where: {
@@ -18,16 +17,6 @@ export const getFundByCode = async (archiveCode: string, fundCode: string): Prom
           code: true,
           title: true,
           years: true,
-          matches: {
-            where: {
-              case_id: null,
-            },
-            select: {
-              updated_at: true,
-              children_count: true,
-              resource_id: true,
-            },
-          },
         },
       },
     },
